--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -2,6 +2,7 @@ jupyter-book>=1.0
 myst-parser
 myst-nb
 sphinx-book-theme
+sphinx-external-toc
 
 # your runtime deps for rendering notebooks (imports)
 pooch
