add infos on development env

--- a/notebooks/_toc.yml
+++ b/notebooks/_toc.yml
@@ -5,6 +5,7 @@ chapters:
   - file: main_install
     title: Installation
     sections:
+      - file: dev_env
       - file: installation
       - file: run
       - file: notes
